# GainPro

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_continuous_integration.yml  run_tests.yml
Datasets/breast/: parameters.json  parameters_noref.json
GenerativeProteomics/: __init__.py  correlation.py  gain_dann_model.py  gaindann.py  gainpro.py  generativeproteomics.py  hypers_optimization.py  imputation_management.py  model.py  output.py  parameters.json  params_gain_dann.py  train.py
GenerativeProteomics/models/: __init__.py
configs/: params_gain.json
docs/source/: Architecture.rst  GainPro.dataset.rst  GainPro.generativeproteomics.rst  GainPro.hypers.rst  GainPro.manager.rst  GainPro.model.rst  GainPro.output.rst  GainPro.rst  GainPro.utils.rst  How to use.rst  Installation.rst  Introduction.rst  conf.py  how_to_use.rst  index.rst
gainpro/: __init__.py  correlation.py  dann_utils.py  data_utils.py  dataset.py  decoder.py  domain_classifier.py  early_stopping.py  encoder.py  evaluation.py  gain_dann_model.py  gainpro.py  grl.py  hypers_optimization.py  metrics.py  model.py  output.py  train.py  utils.py
scripts/: README.md  multiple_runs.sh
tests/: README.md  test_generate_reference.py  test_hint_generation.py  test_hyper.py  test_imputation_management.py  test_imputation_with_reference.py  test_impute_no_reference.py
use-case/: README.md
use-case/1-pip_install/: README.md  test.py
use-case/2-tests/: README.md  test_generate_reference.py  test_hint_generation.py  test_hyper.py  test_imputation_with_reference.py  test_impute_no_reference.py
use-case/3-HuggingFace/: hugging.py
