[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GenerativeProteomics"
version = "0.2.0"
description = "Generative Adversarial Imputation Networks (GAIN) for imputing missing values in proteomics datasets"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "QuantitativeBiology", email = "yperez@ebi.ac.uk"},
]
maintainers = [
    {name = "Diogo Ferreira"},
    {name = "Emanuel Gonçalves"},
    {name = "Jorge Ribeiro"},
    {name = "Leandro Sobral"},
    {name = "Rita Gama"},
    {name = "Yasset Perez-Riverol"},
]
keywords = [
    "proteomics",
    "imputation",
    "missing-data",
    "deep-learning",
    "GAIN",
    "generative-adversarial-networks",
    "bioinformatics",
    "mass-spectrometry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchinfo",
    "numpy<2",
    "tqdm",
    "pandas",
    "scikit-learn",
    "optuna",
    "psutil",
    "anndata",
    "polars",
    "huggingface_hub",
    "transformers",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
visualization = [
    "holoviews",
    "datashader",
    "umap-learn",
    "seaborn",
    "matplotlib",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
all = [
    "GenerativeProteomics[dev,visualization,docs]",
]

[project.urls]
Homepage = "https://github.com/QuantitativeBiology/GainPro"
Documentation = "https://generativeproteomics.readthedocs.io/en/latest/"
Repository = "https://github.com/QuantitativeBiology/GainPro.git"
Issues = "https://github.com/QuantitativeBiology/GainPro/issues"
Changelog = "https://github.com/QuantitativeBiology/GainPro/releases"

[project.scripts]
gainpro = "GenerativeProteomics.gainpro:main"
gain = "GenerativeProteomics.gainpro:gain_main"  # Backward compatibility wrapper: use 'gainpro gain' instead

[tool.setuptools]
packages = ["GenerativeProteomics"]
include-package-data = true

[tool.setuptools.package-data]
GenerativeProteomics = []

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | \.eggs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["GenerativeProteomics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
